# 404---Heroes-Not-Found

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aas  cidade  combatScreen  comoTestar.txt  main  menu  programa  testeViewBar  testeViewCidade  testeViewLoja
Raças/: demihumanrace.h  draconicrace.h  humanrace.h  mainfunctionalrace.cpp  orcrace.h  racesInterface.h
src/: main.cpp
src/model/: main.cpp
src/model/attributes/: AttributesProcessor.cpp
src/model/attributes/include/: AttributesProcessor.hpp
src/model/character/: AlliesSheetHolder.cpp  CharacterIncubator.cpp  CharacterProcessor.cpp  PlayerSheetHolder.cpp  RandomSheetGenerator.cpp  TechnicalSheet.cpp
src/model/character/include/: AlliesSheetHolder.hpp  CharacterIncubator.hpp  CharacterProcessor.hpp  PlayerSheetHolder.hpp  RandomSheetGenerator.hpp  TechnicalSheet.hpp
src/model/jobs/: JobIncubator.cpp  Jobs.cpp  JobsInterface.cpp  JobsInterface.hpp
src/model/jobs/classes/: Barbarian.cpp  Bard.cpp  Cleric.cpp  Druid.cpp  Mage.cpp  Monk.cpp  Necromancer.cpp  Paladin.cpp  Ranger.cpp  Rogue.cpp  Sorcerer.cpp  Warrior.cpp
src/model/jobs/classes/include/: Barbarian.hpp  Bard.hpp  Cleric.hpp  Druid.hpp  Mage.hpp  Monk.hpp  Necromancer.hpp  Paladin.hpp  Ranger.hpp  Rogue.hpp  Sorcerer.hpp  Warrior.hpp
src/model/jobs/include/: JobIncubator.hpp  Jobs.hpp  JobsInterface.hpp
src/model/modifiers/: ModifiersProcessor.cpp
src/model/modifiers/include/: ModifiersProcessor.hpp
src/model/names/: Names.cpp
src/model/races/: RaceIncubator.cpp  Races.cpp  RacesInterface.cpp  RacesInterface.hpp  demihumanrace.h  draconicrace.h  elfrace.h  fairyrace.h  giantrace.h  humanrace.h  mainfunctionalrace.cpp  orcrace.h  raceIncubator.h  races.h  racesInterface.h  undeadrace.h
src/model/races/include/: RaceIncubator.h  RaceIncubator.hpp  Races.h  Races.hpp  RacesInterface.hpp
src/model/races/species/: Demihuman.cpp  Draconic.cpp  Elf.cpp  Fairy.cpp  Giant.cpp  Human.cpp  Infernal.cpp  Orc.cpp  Undead.cpp  Vampire.cpp
src/model/races/species/include/: Demihuman.h  Demihuman.hpp  Draconic.h  Draconic.hpp  Elf.h  Elf.hpp  Fairy.h  Fairy.hpp  Giant.h  Giant.hpp  Human.hpp  Infernal.hpp  Orc.h  Orc.hpp  Undead.hpp  Vampire.hpp
src/ui/Components/: Button.cpp
src/ui/Components/include/: Button.hpp
src/ui/components/: Button.cpp  Dracmas.cpp  lifeBar.cpp  returnButton.cpp  timer.cpp
src/ui/components/include/: Button.hpp  Dracmas.hpp  lifeBar.hpp  timer.hpp
src/ui/telaBar/: testeViewBar.cpp  viewBar.cpp  viewModelBar.cpp
src/ui/telaBar/include/: comoTestar.txt  viewBar.hpp  viewModel.hpp  viewModelBar.hpp
src/ui/telaCidade/: testeViewCidade.cpp  viewCidade.cpp  viewModelCidade.cpp
src/ui/telaCidade/include/: viewCidade.hpp  viewModelCidade.hpp
src/ui/telaCombate/: testeViewCombate.cpp  viewCombate.cpp  viewCombate.hpp  viewModelCombate.cpp  viewModelCombate.hpp
src/ui/telaCombate/include/: viewCombate.hpp  viewModelCombate.hpp
src/ui/telaLoja/: testeViewLoja.cpp  viewLoja.cpp  viewModelLoja.cpp
src/ui/telaLoja/include/: viewLoja.hpp  viewModelLoja.hpp
src/ui/telaMenu/: testeMenu.cpp  viewMenu.cpp  viewModelMenu.cpp
src/ui/telaMenu/include/: viewMenu.hpp  viewModelMenu.hpp
src/ui/telaSobre/: testeViewSobre.cpp  viewModelSobre.cpp  viewSobre.cpp
src/ui/telaSobre/include/: viewModelSobre.hpp  viewSobre.hpp
utils/: Attributes.cpp  AttributesType.cpp  Classes.cpp  Corroutines.cpp  Job.cpp  NameGenerator.cpp  Race.cpp  Species.cpp
utils/include/: AttibutesType.hpp  Attributes.h  Attributes.hpp  Classes.hpp  Corroutines.hpp  Job.h  Job.hpp  NameGenerator.hpp  Race.h  Race.hpp  Species.hpp
